--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+/[Bb]in/
+[Bb]in/
+[Oo]bj/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
@@ -25,6 +28,9 @@
 
 # Visual Studio cache directory
 .vs/
+
+# JetBrains Rider cache directory
+.idea/
 
 # Gradle cache directory
 .gradle/
