--- a/LethalCompanyTemplate/LethalCompanyTemplate.csproj
+++ b/LethalCompanyTemplate/LethalCompanyTemplate.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-		<TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+        <TargetFramework>netstandard2.1</TargetFramework>
         <AssemblyName>LethalCompanyTemplate</AssemblyName>
         <Description>A template for Lethal Company</Description>
         <Version>1.0.0</Version>
